--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
+    "@squoosh/lib": "^0.4.0",
     "css-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^9.0.0",
     "mini-css-extract-plugin": "^2.1.0",
     "sass": "^1.36.0",
     "sass-loader": "^12.1.0",
