--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "devDependencies": {
     "@squoosh/lib": "^0.4.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "html-loader": "^2.1.2",
+    "html-minimizer-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.3.2",
     "image-minimizer-webpack-plugin": "^2.2.0",
     "imagemin-gifsicle": "^7.0.0",
