Внедрил в проект svg-спрайты и применил их в верстке. Изменил формат картинок.
- Рендеринг svg-спрайта в разметку автоматизировал с помощью webpack.
- Создал отдельный файл-спрайты с иконками с блоками с преимуществами для их использования с помощью css.
- Поменял картинки на странице с форматами JPEG и PNG на Webp для поддерживающих этот формат браузеров.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "sass": "^1.36.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "svg-sprite-loader": "^6.0.9",
+    "svgo-loader": "^3.0.0",
     "webpack": "^5.46.0",
     "webpack-dev-server": "^3.11.2"
   },
